deploy/kubernetes/manifests-policy/netpol-sidecar-localonly.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-sidecar-to-localhost
  namespace: sock-shop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8089
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8089
